--- a/index.html
+++ b/index.html
@@ -41,30 +41,29 @@ layout: compress
         <div class="pattern pattern--hidden"></div>
         <!-- cards -->
         <div class="wrapper">
-			{% assign filtered_posts = site.posts | where 'categories', 'gameprogramming' %}
-            {% for post in filtered_posts %}
-            <div class="card" data-id="{{ post.id }}">
+            {% for project in site.projects %}
+            <div class="card" data-id="{{ project.id }}">
                 <div class="card__container card__container--closed">
                     <svg class="card__image" xmlns="http://www.w3.org/2000/svg"
                          xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1920 1200"
                          preserveAspectRatio="xMidYMid slice">
                         <defs>
-                            <clipPath id="{{ post.id }}-clip-path">
+                            <clipPath id="{{ project.id }}-clip-path">
                                 <polygon class="clip" points="0,1200 0,0 1920,0 1920,1200"></polygon>
                             </clipPath>
                         </defs>
-                        <image clip-path="url(#{{ post.id }}-clip-path)" width="1920" height="1200"
-                               xlink:href="{{ post.image }}"></image>
+                        <image clip-path="url(#{{ project.id }}-clip-path)" width="1920" height="1200"
+                               xlink:href="{{ project.image }}"></image>
                     </svg>
                     <div class="card__content">
                         <i class="card__btn-close fa fa-times"></i>
                         <div class="card__caption">
-                            <h2 class="card__title">{{ post.title }}</h2>
-                            <p class="card__subtitle">{{ post.subtitle }}</p>
-							<span class="meta__date">{{ post.date | date: "%Y-%m-%d" }}</span>
+                            <h2 class="card__title">{{ project.title }}</h2>
+                            <p class="card__subtitle">{{ project.subtitle }}</p>
+							<p class="card__subtitle">{{ project.year }}</p>
                         </div>
                         <div class="card__copy">
-                            {{ post.content }}
+                            {{ project.content | markdownify }}
                         </div>
                     </div>
                 </div>
